--- a/Index.html
+++ b/Index.html
@@ -15,13 +15,13 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="">Pagina 1</a>
+                    <a class="nav-link" href="Pagina1.html">Pagina 1</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Pagina 2</a>
+                    <a class="nav-link" href="Pagina2.html">Pagina 2</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Pagina 3</a>
+                    <a class="nav-link" href="Pagina3.html">Pagina 3</a>
                   </li>
                 </ul>
               </div>
@@ -29,7 +29,7 @@
           </nav>
 <br>
           <div class="card" style="width: 18rem; margin: auto;">
-            <img src="cristiano-ronaldo-pictures-iqxyvckond4ed3b8.jpg" class="card-img-top" alt="...">
+            <img src="imagenes/cristiano-ronaldo-pictures-iqxyvckond4ed3b8.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">El mejor jugador de la historia, el GOAT.</p>
             </div>
